--- a/Example/TransAny.xcodeproj/xcshareddata/xcschemes/App.xcscheme
+++ b/Example/TransAny.xcodeproj/xcshareddata/xcschemes/App.xcscheme
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "2600"
-   wasCreatedForAppExtension = "YES"
-   version = "2.0">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -16,24 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "93E53C731B04EC7F00A74760"
-               BuildableName = "Extension.appex"
-               BlueprintName = "Extension"
-               ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "93E53C451B04E40300A74760"
                BuildableName = "App.app"
                BlueprintName = "App"
-               ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+               ReferencedContainer = "container:TransAny.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,16 +32,14 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "2">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -64,7 +47,7 @@
             BlueprintIdentifier = "93E53C451B04E40300A74760"
             BuildableName = "App.app"
             BlueprintName = "App"
-            ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+            ReferencedContainer = "container:TransAny.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,9 +56,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      askForAppToLaunch = "Yes"
-      launchAutomaticallySubstyle = "2">
+      debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -83,7 +64,7 @@
             BlueprintIdentifier = "93E53C451B04E40300A74760"
             BuildableName = "App.app"
             BlueprintName = "App"
-            ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+            ReferencedContainer = "container:TransAny.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
