--- a/Example/TransAny.xcodeproj/xcshareddata/xcschemes/Extension.xcscheme
+++ b/Example/TransAny.xcodeproj/xcshareddata/xcschemes/Extension.xcscheme
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "2600"
-   version = "1.7">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -15,10 +16,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "93E53C731B04EC7F00A74760"
+               BuildableName = "Extension.appex"
+               BlueprintName = "Extension"
+               ReferencedContainer = "container:TransAny.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "93E53C451B04E40300A74760"
                BuildableName = "App.app"
                BlueprintName = "App"
-               ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+               ReferencedContainer = "container:TransAny.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,14 +47,16 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -47,7 +64,7 @@
             BlueprintIdentifier = "93E53C451B04E40300A74760"
             BuildableName = "App.app"
             BlueprintName = "App"
-            ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+            ReferencedContainer = "container:TransAny.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -56,7 +73,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -64,7 +83,7 @@
             BlueprintIdentifier = "93E53C451B04E40300A74760"
             BuildableName = "App.app"
             BlueprintName = "App"
-            ReferencedContainer = "container:XExtensionItemExample.xcodeproj">
+            ReferencedContainer = "container:TransAny.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
