修正屏幕高度适配

--- a/Example/App/Info.plist
+++ b/Example/App/Info.plist
@@ -51,5 +51,21 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>transany</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.transany.url</string>
+		</dict>
+	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>systemBackgroundColor</string>
+	</dict>
 </dict>
 </plist>
